# drf-tma-api

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
api/: Dockerfile
api/config/: settings.py
scripts/: entrypoint.sh
