[tool.poetry]
name = "django-telegram-mini-app-api"
version = "0.1.0"
description = ""
authors = ["welaskez <nazar.nikitenko.03@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.6"


[tool.poetry.group.lint.dependencies]
pre-commit = "^4.1.0"
ruff = "^0.9.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
